[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/Uncontrolled Emotions.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Report/Report.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Report" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Solid" type="ColorRect" parent="Back"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.823529, 0.6, 0.278431, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Strip" type="ColorRect" parent="Back"]
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
color = Color( 0.94902, 0.666667, 0.258824, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 18.2551
margin_right = 110.0
margin_bottom = 107.255
custom_fonts/font = SubResource( 1 )
text = "REPORT:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Report" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 97.5406
margin_right = 110.0
margin_bottom = 186.541
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -169.0
margin_right = 384.0
margin_bottom = -102.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sub" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -245.87
margin_right = 45.5
margin_bottom = -200.87
custom_fonts/font = SubResource( 3 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = 358.607
margin_right = 183.0
margin_bottom = 431.607
custom_fonts/font = SubResource( 4 )
text = "RETURN TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfettiL" type="CPUParticles2D" parent="."]
position = Vector2( 340, 1080 )
emitting = false
amount = 64
lifetime = 4.0
explosiveness = 0.1
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 196 )
initial_velocity = 400.0
scale_amount = 8.0
color = Color( 1, 0.87451, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="ConfettiR" type="CPUParticles2D" parent="."]
position = Vector2( 1580, 1080 )
emitting = false
amount = 64
lifetime = 4.0
explosiveness = 0.1
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 196 )
initial_velocity = 400.0
scale_amount = 8.0
color = Color( 1, 0.87451, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Fade" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Fade"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
autoplay = "fade_out"
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
